Refactor handling of result files.
Signed-off-by: Tibor Zimányi <tibor.zimanyi@ibm.com>