@@ -14,67 +14,54 @@
 
 package org.omg.dmn.tck.runner.junit4;
 
-import org.junit.runner.Description;
-import org.junit.runner.Runner;
-import org.junit.runners.Suite;
-import org.junit.runners.model.InitializationError;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
 import java.io.File;
 import java.io.FilenameFilter;
-import java.net.URI;
+import java.io.IOException;
+import java.io.UncheckedIOException;
+import java.lang.reflect.InvocationTargetException;
 import java.net.URISyntaxException;
 import java.net.URL;
+import java.nio.file.Files;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
-public class DmnTckSuite
-        extends Suite {
+import org.junit.runner.Runner;
+import org.junit.runners.Suite;
+import org.junit.runners.model.InitializationError;
 
-    private static final Logger logger = LoggerFactory.getLogger( DmnTckSuite.class );
+public class DmnTckSuite extends Suite {
 
-    private final Description           descr;
     private final DmnTckVendorTestSuite ntsuite;
-    private final List<Runner>          runners;
+    private final List<Runner> runners;
 
-
-    public DmnTckSuite(Class<?> clazz)
-            throws InitializationError {
-        super( clazz, Collections.<Runner>emptyList() );
-
-        runners = new ArrayList<Runner>();
-
+    public DmnTckSuite(Class<?> clazz) throws InitializationError {
+        super(clazz, Collections.<Runner>emptyList());
+        runners = new ArrayList<>();
         try {
-            ntsuite = (DmnTckVendorTestSuite) clazz.newInstance();
-        } catch ( Exception e ) {
-            logger.error( "Error instantiating test suite.", e );
-            throw new InitializationError( e );
+            ntsuite = (DmnTckVendorTestSuite) clazz.getDeclaredConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | IllegalArgumentException
+                | InvocationTargetException | NoSuchMethodException | SecurityException e) {
+            throw new InitializationError(e);
         }
-        List<URL> urls = ntsuite.getTestCases();
-        this.descr = Description.createSuiteDescription( "DMN TCK test suite" );
 
-        for ( URL url : urls ) {
+        initializeResultFiles(ntsuite.getVendorResultFiles());
+        for (URL url : ntsuite.getTestCases()) {
             File tcFolder = null;
             try {
-                tcFolder = new File( url.toURI() );
-            } catch ( URISyntaxException e ) {
+                tcFolder = new File(url.toURI());
+            } catch (URISyntaxException e) {
                 throw new InitializationError( e );
             }
             final String tcName = tcFolder.getName();
 
-            final File model = new File( tcFolder + "/" + tcName + ".dmn" );
-            if ( !model.exists() ) {
+            final File model = new File(tcFolder + "/" + tcName + ".dmn");
+            if (!model.exists()) {
                 continue;
             }
 
-            File[] tcfiles = tcFolder.listFiles( new FilenameFilter() {
-                public boolean accept(File dir, String name) {
-                    return name.matches( tcName + "-test-\\d\\d.xml" );
-                }
-            } );
+            File[] tcfiles = tcFolder.listFiles( (FilenameFilter) (dir, name) -> name.matches( tcName + "-test-\\d\\d.xml" ) );
             Arrays.sort( tcfiles );
             for ( File tcfile : tcfiles ) {
                 DmnTckRunner runner = new DmnTckRunner( ntsuite, tcfile );
@@ -86,6 +73,18 @@ public class DmnTckSuite
     @Override
     protected List<Runner> getChildren() {
         return runners;
+    }
+
+    private void initializeResultFiles(final ResultFiles tckResultFiles) {
+        final File results = tckResultFiles.getVendorResultsFile();
+        try {
+            Files.deleteIfExists(results.toPath());
+            results.getParentFile().mkdirs();
+            results.createNewFile();
+        } catch (IOException e) {
+            throw new UncheckedIOException(e.getMessage(), e);
+        }
+        tckResultFiles.savePropertiesToVendorResults();
     }
 
 }
